Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19407

Assertion `field->table->stats_is_read' failed in is_eits_usable

    XMLWordPrintable

Details

    Description

      10.2 1214674b712d855d7cd0

      mysqld: /10.2/sql/sql_statistics.cc:4094: bool is_eits_usable(Field*): Assertion `field->table->stats_is_read' failed.
      190507 12:53:28 [ERROR] mysqld got signal 6 ;
       
      linux/raise.c:54(__GI_raise)[0x7f544fa35428]
      stdlib/abort.c:91(__GI_abort)[0x7f544fa3702a]
      assert/assert.c:92(__assert_fail_base)[0x7f544fa2dbd7]
      /lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7f544fa2dc82]
      sql/sql_statistics.cc:4104(is_eits_usable(Field*))[0x5599dc61e251]
      sql/opt_range.cc:2730(create_key_parts_for_pseudo_indexes(RANGE_OPT_PARAM*, st_bitmap*))[0x5599dcd40d2d]
      sql/opt_range.cc:3057(calculate_cond_selectivity_for_table(THD*, TABLE*, Item**))[0x5599dcd42830]
      sql/sql_select.cc:4497(make_join_statistics(JOIN*, List<TABLE_LIST>&, st_dynamic_array*))[0x5599dc514061]
      sql/sql_select.cc:1583(JOIN::optimize_inner())[0x5599dc4f8f54]
      sql/sql_select.cc:1116(JOIN::optimize())[0x5599dc4f4753]
      sql/sql_select.cc:3806(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x5599dc50dcbb]
      sql/sql_select.cc:376(handle_select(THD*, LEX*, select_result*, unsigned long))[0x5599dc4ed59b]
      sql/sql_parse.cc:4003(mysql_execute_command(THD*))[0x5599dc4643e5]
      sql/sql_parse.cc:8020(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x5599dc47d79b]
      sql/sql_parse.cc:1835(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x5599dc458e25]
      sql/sql_parse.cc:1387(do_command(THD*))[0x5599dc455fa2]
      sql/sql_connect.cc:1335(do_handle_one_connection(CONNECT*))[0x5599dc77f796]
      sql/sql_connect.cc:1242(handle_one_connection)[0x5599dc77f19e]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f54506726ba]
      x86_64/clone.S:111(clone)[0x7f544fb0741d]
      

      Attachments

        1. mdev19407.yy
          0.2 kB
        2. mysql.err
          8 kB
        3. mysql.log
          26 kB

        Issue Links

          Activity

            People

              varun Varun Gupta (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 5h
                  1d 5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.