MDEV-19407: Assertion `field->table->stats_is_read' failed in is_eits_usable

Statistics were not read for a table when we had a CREATE TABLE query.
Enforce reading statistics for commands CREATE TABLE, SET and DO.